# AutoSorter

./: Cargo.toml  README.md
src/: main.rs  types.rs
src/functions/: append_log.rs  archive.rs  clean_archive.rs  create_directory.rs  editor.rs  get_dirs.rs  transfer.rs  update_log.rs  watch_folders.rs
