[package]
name = "auto_sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
notify = "5"
crossbeam = "0.8"
zip = "0.5"
walkdir = "2.3"